Adds boilerplate html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class ="main-content">
         <div id="band-name"></div>
         <div id="band-type"></div>
-        <div id="band-bio"</div></div>
+        <div id="band-bio"</div>
     </div>
     
 <footer></footer>
