Adds navbar and footer to all html files

--- a/index.html
+++ b/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    <nav></nav>
+    <nav class="nav-bar">
+        <h2 class="logo"><a href="#">VGE</a></h2>    
+        <ul class="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="bandmem.html">Band Members</a></li>
+            <li><a href="discography.html">Discography</a></li>
+            <li><a href="tour.html">Tour Dates</a></li>
+        </ul>
+    </nav>
 
     <div class ="main-content">
         <div id="band-name"></div>
         <div id="band-type"></div>
-        <div id="band-bio"</div>
+        <div id="band-bio"></div>
     </div>
     
-<footer></footer>
+    <footer>Dylan and Colin and Charles and Marshall</footer>
 <script src="main.js"></script>
 </body>
 </html>
