--- a/discography.html
+++ b/discography.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <nav class="nav-bar">
-        <h2 class="logo"><a href="#">VGE</a></h2>    
+        <h2 class="logo"><a href="index.html">VGE</a></h2>    
         <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
             <li><a href="bandmem.html">Band Members</a></li>
