Adds style to navbar and footer

--- a/bandmem.html
+++ b/bandmem.html
@@ -21,7 +21,7 @@
     <h1>Band Members</h1>
     <div id="band-members"></div>
     
-    <footer>Dylan and Colin and Charles and Marshall</footer>
+    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
     <script src="main.js"></script>
 </body>
 </html>
