--- a/discography.html
+++ b/discography.html
@@ -20,7 +20,7 @@
     
     <div id="discorgaphy-hook"></div>
 
-    <footer>Dylan and Colin and Charles and Marshall</footer>
+    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
     <script src="main.js"></script>
 </body>
 </html>
