--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div id="band-bio"></div>
     </div>
     
-    <footer>Dylan and Colin and Charles and Marshall</footer>
+    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
 <script src="main.js"></script>
 </body>
 </html>
