--- a/index.html
+++ b/index.html
@@ -18,11 +18,7 @@
         </ul>
     </nav>
 
-    <div class ="main-content">
-        <div id="band-name"></div>
-        <div id="band-type"></div>
-        <div id="band-bio"></div>
-    </div>
+    <div id ="main-content"></div>
     
     <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
 <script src="main.js"></script>
