--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </nav>
 
     <div id ="main-content"></div>
+    <div id ="lower-content"></div>
     
     <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
 <script src="main.js"></script>
