--- a/bandmem.html
+++ b/bandmem.html
@@ -21,7 +21,7 @@
     <h1>Band Members</h1>
     <div id="band-members"></div>
     
-    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
+    <div class="footer-holder"><div class="footer">&copy; 2018 | Van Gogh's Ear</div></div>
     <script src="main.js"></script>
 </body>
 </html>
