--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id ="main-content"></div>
     
-    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
-<script src="main.js"></script>
+    <div class="footer-holder"><div class="footer">&copy; 2018 | Van Gogh's Ear</div></div>
+    <script src="main.js"></script>
 </body>
 </html>
