--- a/discography.html
+++ b/discography.html
@@ -19,7 +19,7 @@
     </nav>
     <div id="discorgaphy-hook"></div>
 
-    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
+    <div class="footer-holder"><div class="footer">&copy; 2018 | Van Gogh's Ear</div></div>
     <script src="main.js"></script>
 </body>
 </html>
