--- a/tour.html
+++ b/tour.html
@@ -23,7 +23,7 @@
     <div id="tour-dates"></div>
 
     
-    <div class="footer">&copy; 2018 | Van Gogh's Ear</div>
+    <div class="footer-holder"><div class="footer">&copy; 2018 | Van Gogh's Ear</div></div>
     <script src="main.js"></script>
 </body>
 </html>
