--- a/bandmem.html
+++ b/bandmem.html
@@ -21,7 +21,7 @@
         </ul>
     </nav>
     
-    <h1 class="bandmem-page">The Band</h1>
+    <h1 class="bandmem-page">THE BAND</h1>
     <div id="band-members"></div>
     
     <div class="footer-holder"><div class="footer">&copy; 2018 | Van Gogh's Ear</div></div>
